[package]
name = "leo-status"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leo-status-driver = { path = "../leo-status-driver" }
serde = { version = "1.0.198", features = ["serde_derive"] }
serde_json = "1.0.115"
hidapi = "2.6.1"
clap = { version = "4.5.4", features = ["derive"] }
humantime = "2.1.0"
tiny_http = "0.12"
