[package]
name = "leo-status"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leo-status-driver = { path = "../leo-status-driver" }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.135"
hidapi = "2.6.3"
clap = { version = "4.5.23", features = ["derive"] }
humantime = "2.1.0"
tiny_http = "0.12"
prometheus = "0.13.4"
